--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "apexcharts": "^3.49.1",
+        "vue3-apexcharts": "^1.5.3"
     }
 }
