--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "php": "^8.2",
         "arielmejiadev/larapex-charts": "^2.1",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.5"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
